# zaya1-mlx

./: .gitignore  CLAUDE.md  README.md  STATUS.md
docs/: education-session-starter.md
docs/superpowers/plans/: 2026-05-06-phase0-reference-scaffolding.md  2026-05-06-phase1-skeleton-and-weight-loading.md  2026-05-06-phase2-partial-rope.md  2026-05-06-phase3-cca-forward.md  2026-05-06-phase4-zaya-attention-forward.md  2026-05-06-phase5-att-decoder-layer.md  2026-05-06-phase6-moe-forward.md  2026-05-06-phase7-moe-decoder-layer.md  2026-05-06-phase8-model-forward.md
docs/superpowers/specs/: 2026-05-06-zaya1-mlx-port-design.md
reference/: .gitignore  MANIFEST.md  dump_activations.py  prompts.json  pyproject.toml  test_dump_activations.py
reference/notes/: hf-weight-keys.md  install-log-attempt-1.txt  install-log.md  mlx-lm-conventions.md  zaya-architecture.md
scripts/: download_weights.sh  zaya  zaya_chat.py
validation/: conftest.py  pyproject.toml  test_att_layer_forward.py  test_attention_forward.py  test_cached_generation.py  test_cca_forward.py  test_logits_forward.py  test_model_forward.py  test_moe_forward.py  test_moe_layer_forward.py  test_partial_rope.py  test_weight_loading.py
zaya1_mlx/: __init__.py
